--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-button {
+body {
+    @apply bg-slate-800;
+}
+
+p {
+    @apply text-white;
+}
+
+button, button[type="submit"] {
     @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
 }
 
